ms78_deployment-mysql-2.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: jdbc-app-2
    version: v1
  name: jdbc-app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jdbc-app-2
      version: v1
  template:
    metadata:
      labels:
        app: jdbc-app-2
        group: ms78-jdbc-app
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xms128m -Xmx128m -Xmn128m
        - name: DB_CONNECTION_URI
          valueFrom:
            configMapKeyRef:
              name: mysql-2-config
              key: db.connection.uri
        name: jdbc-app-2
        image: 172.30.1.1:5000/ms78/jdbc-app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests: 
            memory: "200Mi"
            cpu: "200m" # 1/5 core
          limits:
            memory: "400Mi"
            cpu: "500m" 
        securityContext:
          privileged: false
