Service.yml
apiVersion: v1
kind: Service
metadata:
  name: jdbc-app
  labels:
    app: jdbc-app
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: jdbc-app
