ms78_mysql-1-ext-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-1-ext-service
spec:
  ports:
    - protocol: TCP
      name: mysql-1
      port: 3306
      targetPort: 3306
selector: {}
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-1-ext-service
subsets:
  - addresses:
      - ip: 192.168.122.1
    ports:
      - port: 3306
        name: mysql-1
