ms78_mysql-2-ext-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-2-ext-service
spec:
  ports:
    - protocol: TCP
      name: mysql-2
      port: 3307
      targetPort: 3307
selector: {}
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-2-ext-service
subsets:
  - addresses:
      - ip: 192.168.122.1
    ports:
      - port: 3307
        name: mysql-2
