ms78_service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms78-jdbc-app
  labels:
    group: ms78-jdbc-app
spec:
  ports:
  - name: http
    port: 8080
  selector:
    group: ms78-jdbc-app
