mysql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-ext-service
spec:
  ports:
    - protocol: TCP
      name: mysql
      port: 3306
      targetPort: 3306
selector: {}
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-ext-service
subsets:
  - addresses:
      - ip: 192.168.122.1
    ports:
      - port: 3306
        name: mysql
      - port: 3307
        name: mysql
